// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractTypeDefinitionFromFunctionSql mysql should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_url",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_caption",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_credit",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_alt_text",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "upsert_image",
  "output": Array [
    "number",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql mysql should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_suggestion_source",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_external_id",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_suggested_idea_id",
      "type": Array [
        "number",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_status",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_result",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_resultant_curated_idea_id",
      "type": Array [
        "number",
        "null",
      ],
    },
  ],
  "name": "upsert_suggestion",
  "output": Array [
    "number",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql mysql should be able to extract types in this other other example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_array",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_delimiter",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_index",
      "type": Array [
        "number",
        "null",
      ],
    },
  ],
  "name": "hash_string",
  "output": Array [
    "string",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql postgres should be able to extract types from a function that returns a table 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_uuid",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_title",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_status",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_description",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_location_id",
      "type": Array [
        "number",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_photo_ids",
      "type": Array [
        "number[]",
        "null",
      ],
    },
  ],
  "name": "upsert_jerb",
  "output": TypeDefinitionOfResourceTable {
    "columns": Array [
      TypeDefinitionOfResourceColumn {
        "name": "id",
        "type": Array [
          "number",
        ],
      },
      TypeDefinitionOfResourceColumn {
        "name": "uuid",
        "type": Array [
          "string",
        ],
      },
      TypeDefinitionOfResourceColumn {
        "name": "created_at",
        "type": Array [
          "Date",
        ],
      },
      TypeDefinitionOfResourceColumn {
        "name": "effective_at",
        "type": Array [
          "Date",
        ],
      },
    ],
    "name": "function.output",
  },
}
`;

exports[`extractTypeDefinitionFromFunctionSql postgres should be able to extract types in this example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_url",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_description",
      "type": Array [
        "string",
        "null",
      ],
    },
  ],
  "name": "upsert_photo",
  "output": Array [
    "number",
  ],
}
`;

exports[`extractTypeDefinitionFromFunctionSql postgres should be able to extract types in this other example 1`] = `
TypeDefinitionOfResourceFunction {
  "inputs": Array [
    TypeDefinitionOfResourceInput {
      "name": "in_uuid",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_title",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_status",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_description",
      "type": Array [
        "string",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_location_id",
      "type": Array [
        "number",
        "null",
      ],
    },
    TypeDefinitionOfResourceInput {
      "name": "in_photo_ids",
      "type": Array [
        "number[]",
        "null",
      ],
    },
  ],
  "name": "upsert_job",
  "output": Array [
    "number",
  ],
}
`;
